--- a/commit_xml/cok_C++编码规范2019版.md
+++ b/commit_xml/cok_C++编码规范2019版.md
@@ -344,6 +344,76 @@ for (int i = 0; i < number; /* Empty Increment */)
 
 - 所有类都需要提供构造函数，实体-关系模型中的实体类最好能够提供拷贝构造函数，避免成员变量在复制时被浅拷贝的情况出现；
 - 不要在构造函数中调用虚函数
+- 在多态中,基类的构造函数使用virtual,避免类对象部分销毁
+- 使用explicit 避免参数隐式转换
+### 使用delete 删除不必要的编译器生成函数
+- 如果不需要编译器自动产生的函数,显示使用delete 删除
+
+  ```c++
+  class A
+  {
+    	public:
+    		//C++11 之前是能过不实现函数体获得编译器错误
+    		A(A& rhs) = delete;
+    		
+  };
+  ```
+### 私有析构函数
+- 如果一个类的对象只能被自身和友元删除,这个类的对象必须创建在heap上
+
+```c++
+class A
+{
+  	public:
+  		void destoryMe() { delete this; }
+  	private:
+  		~A(){}
+};
+
+int main()
+{
+  	//不能在栈上创建对象,本销毁时会再次释放
+  	A a;
+  	a.destoryMe()
+      
+    //在堆内存上创建
+    A *p = new A;
+	  p->destoryMe();
+}
+```
+
+### 避免析构函数抛出异常
+- 异常抛出后会清理栈空间,如果此时栈空间上对象在析构再次抛出异常,则会造成多个异常抛出,而c++对此行不做定义
+
+### 异常安全的拷贝构造函数
+- 处理自我赋值
+
+- 构造对象抛出异常应该保持原对象的完整性
+  ```c++
+  class color;
+  class dog
+  {
+    	color *pColor;
+    	public:
+    		dog& operator=(const dog& rhs)
+        {
+          	if(this == &rhs)
+              return *this;
+          
+          	color *pOld = pColor;
+          	pColor = new color(*rhs.pColor);//即使构造函数抛出异常dog对象仍是完整的
+          	delete pOld;
+          	return *this;
+        }
+  };
+  ```
+
+### 使用RAII 管理对象
+- Resource Acuqistion is Initialization(RAII) 当栈销毁时唯一确保执行的是对象的析构函数  
+- 避免智能指针构造与其它参数一起传入函数,因为其它参数可能抛出异常,而对象初始化并交由智能指针管理的时机由编译器决定,异常抛出可能来不及加入智能对象管理
+
+### 避免给虚函数默认值
+- 虚函数调用是运行时绑定的,而函数的默认值是编译期绑定的
 
 ### 拷贝
 
@@ -447,7 +517,46 @@ std::sort(v.begin(), v.end(), [](int x, int y)
 - 不要使用`std::list`的`size()`，这个函数在vc下时间复杂度是O(1)，但是在gcc下会整体遍历，时间复杂度为O(n)；
 - `std::vector`插入右值时，使用`emplace_back()`代替`push_back()`
 
+### 显式类型转换
+- 使用 static_cast,dynamic_cast,const_cast,reinterpret_cast,对类型进行转换,并明确各种类型转换之间的可行性
+### 使用const 的好处
+- 避免错误的修改对我们的数据千万污染
 
+- 加const 的变量亦是一种自我注释,表示程序在运行期不应该写这个变量
+
+- 帮助编译器对代码进行优化
+
+- Const 变量意味着 可以放进ROM进行运算
+
+- 使用const 和 numtable 避免逻辑上的的const 二义性
+
+  ```c++
+  class BigArray
+  {
+    	priavate:
+        vector<int> v;//huge vector
+        mutable int accessCounter;
+    
+    		int * v2;//another int array
+    	public:
+    		//getItem is a logic constant function
+    		int getItem(int index) const
+        {
+          	++accessCounter;//实际上修改了成员变量
+          	return v[index];
+        }
+    		
+    		//仍然可以通过编译,因为修改的是v2 指向的内容,v2 没有改变
+    		void setV2Item(int index,int x) const 
+        {
+         	*( v2 + index ) = x; 
+        }
+  };
+  ```
+
+
+### 显式类型转换
+- 使用 static_cast,dynamic_cast,const_cast,reinterpret_cast,对类型进行转换,并明确各种类型转换之间的可行性
 
 ## 内存管理
 
@@ -496,3 +605,7 @@ std::sort(v.begin(), v.end(), [](int x, int y)
   
 
 
+
+```
+
+```
